<resources>
    <string name="app_name">ICDesignCourse</string>
    <string name="mulailah">Mulailah Perjalanan Kamu bersama IC Design Course</string>
    <string name="text_belajar_desain">Belajar Desain dengan Lebih Mudah dan Menyenangkan bersama IC Design</string>
    <string name="belajar_design_desctiption">belajar design desctiption</string>
    <string name="judul_ic_design">Judul Ic Design</string>
    <string name="icdesign">Icdesign</string>
    <string name="daftar">Daftar</string>
    <string name="masuk1">Masuk !</string>
    <string name="logo_ic_design">logo_ic_design</string>
    <string name="icdesign_gmail_com">icdesign@gmail.com</string>
    <string name="e_mail">E-Mail</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="ilustrasi">Ilustrasi</string>
    <string name="atau">Atau</string>
    <string name="akun_google">Akun Google</string>
    <string name="belum_punya_akun">Belum Punya Akun ?</string>
    <string name="sudah_punya_akun">Sudah Punya Akun ?</string>
    <string name="ombaktop">ombakTop</string>
    <string name="ombakbottom">ombakBottom</string>
    <string name="masuk">Masuk</string>
    <string name="daftar_sekarang">Daftar Sekarang!</string>
    <string name="lupa_password">Lupa Password ?</string>
    <string name="lanjut">Lanjut</string>
    <string name="dsn_ui_ux">Desain UI/UX</string>
    <string name="desain_grafis">Desain Grafis</string>
    <string name="nanya_kelas">Mau belajar di kelas apa ?</string>
    <string name="student">Student</string>
    <string name="mentor">Mentor</string>
    <string name="role_mu">Role anda sebagai apa ?</string>
    <string name="lengkapi_profil">Lengkapi Profilmu Dulu Yuk !</string>
    <string name="nologin">noLogin</string>
    <string name="pilihan_paket">Pilihan Paket</string>
    <string name="siapkan_dirimu_belajar_lebih_banyak_materi_dan_metode_pembelajaran_premium_hanya_di_icdesign_gunakan_promo_awal_tahun_guna_menambah_skill_desain_kamu_sekarang">Siapkan dirimu belajar lebih banyak materi dan metode pembelajaran premium hanya di ICDesign! Gunakan promo awal tahun guna menambah skill desain kamu sekarang!</string>
    <string name="beginner">Beginner</string>
    <string name="favorite">Favorite</string>
    <string name="rp_300_000">Rp. 300.000</string>
    <string name="deskripsiBeginner">Cocok bagi pemula yang ingin belajar tentang desain. Paket ini memberikan akses ke modul pembelajaran dengan materi-materi penting dan beberapa kuis untuk melatih pemahaman awal.</string>
    <string name="intermediate">Intermediate</string>
    <string name="good">GOOD</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="masukkan_email">Masukkan Email...</string>
    <string name="dekripsi_highlevel">Pilihan terbaik untuk profesional atau ingin menguasai desain secara mendalam. Mendapatkan akses penuh ke semua modul premium dan kuis tingkat tinggi untuk meningkatkan keterampilan secara maksimal.</string>
    <string name="deskripsiIntermediate">Ideal bagi pengguna dengan pengetahuan dasar yang ingin mendalami keterampilan desain. Mencakup akses lebih banyak modul lanjutan dan kuis interaktif untuk menguji kemampuan desain dengan lebih intensif.</string>
    <string name="hot">HOT</string>
    <string name="ic_Design">IC Design</string>
    <string name="detail_paket">Detail Paket</string>
    <string name="rp_500_000">Rp. 500.000</string>
    <string name="apa_saja">Apa saja fasilitas yang akan di dapat?</string>
    <string name="beli_paket_sekarang">Beli Paket Sekarang</string>
    <string name="panduan_pengenalan">Panduan Pengenalan Desain UI/UX</string>
    <string name="kuis_pengantar">Kuis Pengantar Pembelajaran Desain Interaktif</string>
    <string name="akses_ke_fitur_dasar">Akses ke Fitur Dasar</string>
    <string name="high_level">High Level</string>
    <string name="apa_saja_fasilitas_yang_akan_di_dapat">Apa saja fasilitas yang akan di dapat?</string>
    <string name="interaction_design">Interaction Design</string>
    <string name="membuat_prototyping">Membuat Prototyping</string>
    <string name="pembahasan_materi">Pembahasan Mengenai Testing dan Validasi Desain UI/UX</string>
    <string name="kuis_pendukung">Kuis Pendukung Pembelajaran yang Interaktif</string>
    <string name="career_coaching">Career Coaching ( Panduan Pembuatan CV Profesional )</string>
    <string name="pembuatan_portofolio">Panduan Pembuatan Portofolio yang Rapi</string>
    <string name="back">Back</string>
    <string name="rp_1_300_000">Rp. 1.300.000</string>
    <string name="rp_700_000">Rp. 700.000</string>
    <string name="warna_tipografi">Panduan Tentang Warna, Tipografi, dan Hierarki Visual</string>
    <string name="persiapan_portofolio">Panduan Persiapan Portofolio Desain Awal</string>
    <string name="kuis_pembelajaran_interaktif">Kuis Pembelajaran Interaktif yang Lebih Detail</string>
    <string name="pembahasan_pengujian_dan_validasi">Pembahasan Pengujian dan Validasi Desain Dasar</string>
    <string name="membuat_prototyping_tingkat_lanjut">Membuat Prototyping Tingkat Lanjut</string>
    <string name="belajar_melakukan_research_yang_mendalam">Belajar Melakukan Research yang Mendalam</string>
    <string name="akses_ke_fitur_menengah">Akses ke Fitur Menengah</string>
    <string name="ringkasan_materi">Ringkasan Materi Mendalam dari Mentor</string>
    <string name="_75_konten_premium">75 + Konten Premium Dengan Template Lebih Kompleks</string>
    <string name="memahami_konsep_dasar_research">Memahami Konsep Dasar Research</string>
    <string name="pengantar_pembuatan_paratyping">Pengantar Pembuatan Paratyping</string>
    <string name="pengantar_interaction_design">Pengantar Interaction Design</string>
    <string name="_50_konten_premium">50 + Konten Premium Beserta Template Sederhana</string>
    <string name="_100_konten_premium">100 + Konten Premium Dengan Template Lebih Kompleks</string>
    <string name="rp_1_000_000">Rp. 1.000.000</string>
    <string name="klik_disini">Klik Disini</string>
    <string name="choose_file">Choose file</string>
    <string name="simpan">Simpan</string>
    <string name="level">level</string>
    <string name="foto_profil">Foto Profil</string>
    <string name="lengkapi_profilmu_dulu_yuk">Lengkapi Profilmu Dulu Yuk!</string>
    <string name="username">Username</string>
    <string name="shin_tae_yong">Shin Tae Yong</string>
    <string name="shintaeyong_gmail_com">shintaeyong@gmail.com</string>
    <string name="login">login</string>
    <string name="akun">Akun</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="kelas_paket">Kelas Paket</string>
    <string name="keluar">Keluar</string>
    <string name="konfirmasi">Konfirmasi</string>
    <string name="kartu_kredit">Kartu Kredit</string>
    <string name="transfer_bank">Transfer Bank</string>
    <string name="total_pembayaran">Total Pembayaran</string>
    <string name="rp_800_000">Rp. 800.000</string>
    <string name="rp_200_000">Rp. 200.000</string>
    <string name="promo_ramadhan_disc_20">Promo Ramadhan Disc 20%</string>
    <string name="high_level_paket_belajar">High Level - Paket belajar desain ui/ux ( Gratis rangkuman dan akses modul class selama 1 tahun )</string>
    <string name="back_button">Back Button</string>
    <string name="konsep_ui_ux">Konsep UI UX</string>
    <string name="modul">Modul</string>
</resources>