<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:padding="14dp"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuLogin">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="24dp"
        app:boxBackgroundMode="filled"
        app:layout_constraintTop_toBottomOf="@id/imageLogin"
        tools:ignore="MissingConstraints">
        <EditText
            android:id="@+id/isiEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:hint="@string/masukkan_email"
            android:inputType="textEmailAddress"
            android:background="@color/grey"
            android:textColorHint="@color/white"
            android:textSize="14sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/layoutEmail"
        app:boxBackgroundMode="filled"
        app:passwordToggleEnabled="true"
        tools:ignore="MissingConstraints">

        <EditText
            android:id="@+id/isiPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:hint="@string/kata_sandi"
            android:inputType="textPassword"
            android:background="@color/grey"
            android:textSize="14sp"
            tools:ignore="Autofill" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnMasuk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/softpurple"
        android:fontFamily="@font/poppins"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/masuk"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutPassword"/>



    <TextView
        android:id="@+id/txtAtau"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins"
        android:text="@string/atau"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnMasuk"
        tools:ignore="MissingConstraints" />



    <TextView
        android:id="@+id/txtBelum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/belum_punya_akun"
        android:fontFamily="@font/poppins"
        android:textSize="14sp"
        android:layout_marginBottom="36dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/btnGoogle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txtDaftarSkrng"
        android:gravity="center"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/txtDaftarSkrng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/daftar_sekarang"
        android:textColor="@color/biru"
        android:layout_marginBottom="36dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/btnGoogle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/txtBelum"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textLupa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins"
        android:text="@string/lupa_password"
        android:textColor="@color/biru"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtDaftarSkrng"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageLogin"
        android:layout_width="225dp"
        android:layout_height="237dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/login"
        tools:layout_editor_absoluteX="14dp" />
    <ImageView
        android:id="@+id/btnGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:srcCompat="@drawable/googleg_standard_color_18"
        android:scaleX="1.5"
        android:scaleY="1.5"
        tools:layout_editor_absoluteX="71dp"
        tools:layout_editor_absoluteY="738dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtAtau"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>